src/test/resources/tokens/invalid/integer_out_of_bounds_positive_octal.unpick
unpick v3
const int
    0 = 040000000000